Bug 324760 - New window (from dragged tab) appears on wrong monitor
Summary: New window (from dragged tab) appears on wrong monitor
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-10 19:09 UTC by Mark K Cowan
Modified: 2014-02-26 04:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark K Cowan 2013-09-10 19:09:30 UTC
ACTION (STEP TO REPRODUCE):
I have two tabs open in a maximised Konsole window, on a second monitor.
I drag one tab onto my (empty) primary monitor.

EXPECTED RESULT:
I expect the new window resulting from that drag to appear on my primary monitor.

ACTUAL RESULT:
Instead, the new window appears maximised on my secondary monitor, exactly how the original window is.

Reproducible: Always

Steps to Reproduce:
See "Details"
Actual Results:  
See "Details"

Expected Results:  
See "Details"

Konsole 2.1
KDE 4.11.00

This also happens in Chromium, so could be a window manager issue rather than a Konsole issue.
Comment 1 Kurt Hindenburg 2014-02-12 20:48:20 UTC
Confirmed - I'll see if I can fix it.
Comment 2 Kurt Hindenburg 2014-02-13 01:15:37 UTC
Git commit e6dcc8d6b8e635d5f7f718e7adfadbca5c3b14b8 by Kurt Hindenburg.
Committed on 13/02/2014 at 01:14.
Pushed by hindenburg into branch 'master'.

When dragging and dropping tabs, move new window to cursor positon

This fixes multiple monitor issues - dnd window will be moved to where
user dropped the window.
FIXED-IN: 2.13

M  +3    -0    src/Application.cpp

http://commits.kde.org/konsole/e6dcc8d6b8e635d5f7f718e7adfadbca5c3b14b8
Comment 3 Kurt Hindenburg 2014-02-17 14:30:00 UTC
Git commit 89160c5985667593f7197b02f0ddd8a71a16f3b8 by Kurt Hindenburg.
Committed on 13/02/2014 at 01:14.
Pushed by hindenburg into branch 'frameworks'.

When dragging and dropping tabs, move new window to cursor positon

This fixes multiple monitor issues - dnd window will be moved to where
user dropped the window.
FIXED-IN: 2.13
(cherry picked from commit e6dcc8d6b8e635d5f7f718e7adfadbca5c3b14b8)

M  +3    -0    src/Application.cpp

http://commits.kde.org/konsole/89160c5985667593f7197b02f0ddd8a71a16f3b8
Comment 4 Kurt Hindenburg 2014-02-26 04:27:24 UTC
Git commit f5fe1af82aea5a27b9ac222db16c1e60167f749a by Kurt Hindenburg.
Committed on 13/02/2014 at 01:14.
Pushed by hindenburg into branch 'KDE/4.12'.

When dragging and dropping tabs, move new window to cursor positon

This fixes multiple monitor issues - dnd window will be moved to where
user dropped the window.
FIXED-IN: 2.13
(cherry picked from commit e6dcc8d6b8e635d5f7f718e7adfadbca5c3b14b8)

M  +3    -0    src/Application.cpp

http://commits.kde.org/konsole/f5fe1af82aea5a27b9ac222db16c1e60167f749a