When dragging and dropping tabs, move new window to cursor positon

This fixes multiple monitor issues - dnd window will be moved to where
user dropped the window.

BUG: 324760
FIXED-IN: 2.13