src/Application.cpp
@@ -89,6 +89,9 @@ void Application::detachView(Session* session)
 {
     MainWindow* window = newMainWindow();
     window->createView(session);
+    // Since user is dragging and dropping, move dnd window to where
+    // the user has the cursor (correct multiple monitor setups).
+    window->move(QCursor::pos());
     window->show();
 }
 
